# RenderGU

./: .gitignore  .gitmodules  COPYRIGHT  README.md  README.md.backup
CourseSolution/Initial/: Initial.vcxproj  Initial.vcxproj.filters  LinkShaders.h  Rendering.h  Shaders.h  data.h  main.cpp
Linux/: CMakeLists.txt  Triangle.x3d  _Plane.x3d  build.sh  run.sh
Linux/CLion/: .cproject  .project  CMakeLists.txt
Linux/Eclipse/: CMakeLists.txt
Linux/Eclipse/Projects/: .cproject  Blue.xcf  Red.xcf
Linux/Eclipse/Projects/src/: Camera.h  CustomMatrices.h  Rendering.h  Rendering_Common.h  Shaders.h  Textures.h  Utility.h  VertexSpecification.h  VertexSpecification_Common.h  Window.h  data.h  glad.c  input.h  main.cpp  new_model.sh
Linux/Eclipse/Projects/src/models/: model_render_data.h
Linux/Eclipse/Projects/src/models/floor/: data.h  model.h  render.h  shaders.h  vertex_specification.h
Linux/Eclipse/Projects/src/models/line/: model.h  shaders.h
Linux/Eclipse/Projects/src/models/simple_cube/: model.h  shaders.h
Linux/Eclipse/Projects/src/models/simple_quad/: model.h  shaders.h
Linux/Eclipse/Projects/src/models/triangle/: model.h  shaders.h
Linux/Eclipse/Projects/src/old/: Old_Shaders.txt  Old_data.txt
Linux/Eclipse/Projects/src/scenes/CubeGrassWindowFloor/: render.h
Linux/Eclipse/Projects/src/scenes/Skybox/: render.h  scene_render.h  setup_cubemap.h
Linux/Eclipse/Projects/src/scenes/TransformationMatricesInDepth/: scene_render.h
Linux/General/: CMakeLists.txt  build.sh
Linux/SPIRV_Bin/: 2DTransformationTest.vert.spv  FragmentShader.frag.spv  InstancingTest.frag.spv  InstancingTest.vert.spv  LightSource.frag.spv  Object.frag.spv  Object.vert.spv  Plane.vert.spv  VertexShader_Tex2.vert.spv
Linux/resources/: .project  Green.xcf  metal2.xcf  scene1.xcf  scene2.xcf
Linux/resources/2DMenu/: 2D_Menu.xcf  2D_Menu_Prototype.xcf
Linux/src/: CompileShaders.h  DeltaTime.h  LinkShaders.h  SceneDisplayFuncs.h  Utility.h  Window.h  data.h  main.cpp
Linux/src/engine/: EngineBasicShapes.h  EngineEndFrame.h  EngineInputProcessing.h  EngineModelDataInterface.h  EngineTickGame.h  EngineUtils.h  EngineVariables.h  GameUtils.h
Linux/src/engine/SPIRV_Compile/: RenderGU_CompileShaders.sh
Linux/src/games/BaselineCube/: Cube.h
Linux/src/games/BaselinePlane/: Plane.h
Linux/src/games/BaselineTriangle/: Triangle.h
Linux/src/games/BaselineTriangle/shaders/set1/src/: CompileShaders.sh  FragmentShader.frag.glsl
Linux/src/games/BaselineTriangle/shaders/set3/src/: FragmentShader_Tex2.frag.glsl
Linux/src/games/TransitionAndMenuShowcase/: Game.h
Linux/src/models/floor/: model.h
Linux/src/old/: Old_Rendering.txt  Old_data.txt
Linux/src/scenes/: BarycentricTriangle.h
Linux/src/scenes/CubeGrassWindowFloor/: scene_render.h
MSVC/: CMakeLists.txt  CopyResources.sh
MSVC/SPIRV_Bin/: FragmentShader.frag.spv  FragmentShader_Tex2.frag.spv  Object.frag.spv  Object.vert.spv  VertexShader_Tex.vert.spv
Solution/: Solution.sln
Solution/Initial/: Initial.vcxproj  Initial.vcxproj.filters  Rendering.h  Shaders.h  Utility.h  main.cpp
Windows/: Initial.vcxproj  Solution.sln
Windows/src/: CompileShaders.h  LinkShaders.h  Rendering.h  Shaders.h  Textures.h  VertexSpecification.h  data.h  input.h  main.cpp
resources/: ErrorShaderVar.xcf  marble2.xcf
resources/2DMenu/: 2D_Menu_Prototype.xcf
src/: Camera.h  CompileShaders.h  CustomMatrices.h  DeltaTime.h  Rendering_Common.h  Shaders.h  Textures.h  Utility.h  VertexSpecification_Common.h  Window.h  main.cpp
src/engine/: EngineBasicShapes.h  EngineModelDataInterface.h  EngineTickGame.h  EngineUtils.h  EngineVariables.h  GameUtils.h
src/engine/SPIRV_Compile/: RenderGU_CompileShaders.sh  RenderGU_CompileShaders_win.sh  glslangValidator
src/games/BaselineCube/: Cube.h
src/games/BaselineLighting/: Lighting.h
src/games/BaselineLighting/shaders/LightSource/bin_win/: LightSource.frag.spv
src/games/BaselineLighting/shaders/LightSource/src/: LightSource.frag.glsl
src/games/BaselineLighting/shaders/Object/bin_win/: Object.frag.spv
src/games/BaselineLighting/shaders/Object/src/: Object.frag.glsl  Object.vert.glsl
src/games/BaselinePlane/: Plane.h
src/games/BaselineTriangle/: Triangle.h
src/games/BaselineTriangle/shaders/set1/bin_win/: VertexShader.vert.spv
src/games/BaselineTriangle/shaders/set2/src/: FragmentShader_Tex.frag.glsl  VertexShader_Tex.vert.glsl
src/games/BaselineTriangle/shaders/set3/src/: VertexShader_Tex2.vert.glsl
src/games/TransitionAndMenuShowcase/: Game.h
src/models/cube/: model.h  shaders.h
src/models/skybox/: model.h
src/old/: Old_Shaders.txt  Old_main.txt
src/scenes/: Camera3D.h
src/scenes/CubeGrassWindowFloor/: scene_render.h
src/scenes/Skybox/: setup_cubemap.h
src/test/Optimisations/: Instancing.h  VBO_OptimisationTest.h
src/test/Optimisations/shaders/Triangle/src/: CompileShaders_win.sh  InstancingTest.vert.glsl  Plane.vert.glsl
src/test/Transformations/: 2D.h
src/test/Transformations/shaders/Triangle/src/: 2DTransformationTest.frag.glsl  2DTransformationTest.vert.glsl
